# MAGE

./: .env  .gitattributes  .gitignore  .gitmodules  .mailmap  CMakeCache.txt  CMakeLists.txt  LICENSE.md  README.md  kaiju.sublime-project  kaiju_project.md  setup.py
buildTests/: test.py
cmake/: compilers.cmake  user.cmake.gnu  user.cmake.intel
containers/: CGS GAMERA Containerization.md  Dockerfile  containerization.md  gamera.def  modules_nas  requirements.txt
gitHookScripts/: post-checkout  post-commit  post-merge  pre-push
kaipy/: cdaweb_utils.py  embiggenUtils.py  kJobs.py  kaiH5.py  kaiTools.py  kaiViz.py  kaijson.py  kaixdmf.py  kdefs.py  lfm2kaiju.py  meta.yaml  requirements.txt  supermage.py  transform.py
pytests/: test_satcomp_cdasws.py  test_with_pytest.py
scripts/: XMLGenerator.py  calcdB.py  config.ini  dbCat.py  dstpic.py  embiggen.py  embiggenMIX.py  gamsphVid.py  genGrid.py  genLFM.py  genRCM.py  genXDMF.py  genXDMFmpi.py  genXLine.py  genhelioGrid.py  genmpiXDMF.py  heliopic.py  initialize.py  joinRestart.py  lfm2chimp.py  mixpic.py  mpidecompRestart.py  msphParallelSatComp.py  msphPbsSatComp.py  msphRescale.py  msphSatComp.py  msphpic.py  numSteps.py  omni2wind.py  printResTimes.py  printTimes.py  rcmSpecFlux.py  rcmpic.py  reWind.py  remixTimeSeries.py  remix_plot.py  settings.ini  setupEnvironment.csh  setupEnvironment.sh  setupEnvironment.zsh  (+10 more)
src/raiju/: CMakeLists.txt  raijuAdvancer.F90  raijuBCs.F90  raijuColdStartHelper.F90  raijuDomain.F90  raijuELossWM.F90  raijuEtautils.F90  raijuGrids.F90  raijuICHelpers.F90  raijuIO.F90  raijuOut.F90  raijuPreAdvancer.F90  raijuRecon.F90  raijuSpeciesHelper.F90  raijuStarter.F90  raijuTypesSub.F90  raijulosses.F90
src/raiju/ICs/: raijuOwdIC.F90
src/raiju/losses/: raijuEleLossHelper.F90  raijuLoss_CC.F90  raijuLoss_CX.F90  raijuLoss_SS.F90  raijuLoss_eWM_BW.F90  raijuLoss_eWM_Chen05.F90
src/rcm/: CMakeLists.txt  READ_BEFORE_COMPILING_RCM  aanotes.f90.txt  conversion_module.F90  etautils.F90  ionosphere_exchange.F90  lossutils.F90  mhd_scalars.F90  mhd_scalars.f90  modules.F90  modules.f90  precision.F90  precision.f90  rcm_include.h  rcm_interfaces.F90  rcm_interfaces.f90  rcm_mhd.F90  rcm_mhd.f90  rcm_mhd_interfaces.F90  rcm_mhd_interfaces.f90  rcm_mhd_io.F90  rcm_mhd_io.f90  rcm_subs.F90  rcm_subs.f90  rcm_timing.f90  rcmclaw.f90  rcmdir.h  rcmu2tecplot.F90  rcmutorcm-tec.f90  rcmutorcm.F90  rcmutorcm.f90  read_alam.F90  read_alam.f90  tomhd.F90  tomhd.f90  torcm.F90  torcm.f90
src/rcm/backup/: rcm_mhd.f90  tomhd.f90  torcm.f90
src/rcm/temp/: rcm_subs_orig.90
src/sif/: CMakeLists.txt  sifAdvancer.F90  sifBCs.F90  sifEtautils.F90  sifGrids.F90  sifIC.F90  sifICHelpers.F90  sifIO.F90  sifOut.F90  sifSpeciesHelper.F90  sifStarter.F90  siflosses.F90
src/sif/ICs/: testIC.F90
testingScripts/: ICtest.py  ICtestReport.py  buildTest.py  buildTest.py~  build_mage-template.pbs  combined_relative_tests_report.py  common.py  compare_mage_runs.py  compare_mage_runs_numerical.py  cronTab  crontab  dashModules.txt  derecho_configuration_check-template.pbs  derecho_configuration_check.py  intelCheckReportSubmit-template.pbs  intelCheckReportSubmit.pbs  intelCheckSubmit.pbs  intelCheckSubmitMem-template.pbs  intelCheckSubmitMem.pbs  intelCheckSubmitReport-template.pbs  intelCheckSubmitThread-template.pbs  master.py  (+35 more)
tests/: CMakeLists.txt  calculateCodeCoverage.sh  comp_file.txt  genTestData-template.pbs  genTestData.pbs  runAllTests.pbs  runCaseTests-template.pbs  runCaseTests.pbs  runMpiNonCaseTests.pbs  runNonCaseTests.pbs  runNonCaseTests1-template.pbs  runNonCaseTests1.pbs  runNonCaseTests2-template.pbs  runNonCaseTests2.pbs  unitTestReport-template.pbs  unitTestReport.pbs
tests/_obsolete/: genTestData.pbs  runCaseTests.pbs  runNonCaseTests2.pbs  unitTestReport.pbs
tests/base_mpi/: testbasempi.pf
tests/cases/: adv1d.xml  adv1d_8cent.xml  adv2d.xml  alfven.xml  loop2d.xml  loop3d.xml  ot2d.xml  remix.xml  testCases.pf
tests/cases_mpi/: blast3d_large.xml  testCasesMpi.pf
tests/gamera/: lfmbw.xml  testfields.pf  testgamutils.pf  testio.pf  testmetric.pf
tests/gamera/cylforcebal/: cylfb.xml
tests/gamera_mpi/: blast3d_1.xml  blast3d_16.xml  blast3d_27.xml  blast3d_3.xml  blast3d_4.xml  blast3d_64.xml  blast3d_9.xml  blast3d_bc_111_FFF.xml  blast3d_bc_111_TFF.xml  blast3d_bc_111_TTF.xml  blast3d_bc_111_TTT.xml  blast3d_bc_16.xml  blast3d_bc_4.xml  blast3d_bc_411_FFF.xml  blast3d_bc_411_FTF.xml  blast3d_bc_411_FTT.xml  blast3d_bc_411_TFF.xml  blast3d_bc_411_TTF.xml  blast3d_bc_411_TTT.xml  blast3d_bc_441_FFF.xml  blast3d_bc_441_FFT.xml  blast3d_bc_441_TFF.xml  blast3d_bc_441_TFT.xml  blast3d_bc_441_TTF.xml  blast3d_bc_441_TTT.xml  blast3d_bc_444_FFF.xml  blast3d_bc_444_TFF.xml  blast3d_bc_444_TTF.xml  blast3d_bc_444_TTT.xml  blast3d_mhd_1.xml  blast3d_mhd_16.xml  blast3d_mhd_4.xml  blast3d_mhd_64.xml  lfmbw_241.xml  lfmbw_441.xml  testbc.pf  testmpi.pf  testmpibc.pf  testmpifields.pf  testmpimhd.pf
tests/gl/: 3D16 copy.xml  3D16.xml  3D256.xml  3D64Schmit.xml  3DTether64.xml  testsolution.pf
tests/helperCode/: testHelper.F90
tests/helperCode_mpi/: testHelperMpi.F90
tests/interfaces/: test_mhd_mix_interface.pf
tests/rcm/: cmriD.xml  testetautils.pf
tests/remix/: cmiD.xml  testmixmain.pf
tests/shellgrid/: testGridGen.pf  testGridInterp_TSC.pf  testGridLocator.pf  testSGIO.pf  testSGInterp.pf
tests/voltron/: ._cmriD_Jupiter.xml  ._cmriD_NewPlanet.xml  cmriD_Earth.xml  cmriD_Jupiter.xml  cmriD_NewPlanet.xml  testVoltGridGen.pf  testebsquish.pf  testmhd2mix.pf  testmix2mhd.pf  testplanetunits.pf  testrcm.pf  testring.pf  voltGridTests.xml
tests/voltron_mpi/: cmiD_1.xml  cmiD_16.xml  cmiD_4.xml  cmiD_8.xml  cmiD_deep_1.xml  cmiD_deep_16.xml  cmiD_deep_4.xml  cmiD_deep_8.xml  cmiD_deep_8_genRes.xml  cmiD_deep_8_res0.xml  cmiD_deep_8_res60.xml  cmiD_deep_8_res600.xml  genRestarts.pbs  geo_mpi.xml  testHelpersSquish_4.xml  testHelpersStep_4.xml  testHelpersTubes_4.xml  testSquishHelpers.pf  testTubeHelpers.pf  testcoupling.pf  testebmpi.pf  testhelpers.pf  testvmpi.pf  testvmpideep.pf
(+618 files in other folders)
