file(GLOB raiju_srcs_f90 *.F90 losses/*.F90)
file(GLOB raiju_srcs_f *.F)
if(CMAKE_Fortran_COMPILER_ID MATCHES Intel)
	set_source_files_properties(${raiju_srcs_f} PROPERTIES COMPILE_FLAGS "-fixed -nowarn")
elseif(CMAKE_Fortran_COMPILER_ID MATCHES GNU)
	set_source_files_properties(${raiju_srcs_f} PROPERTIES COMPILE_FLAGS "-ffixed-form")
endif()
add_library(raijulib ${raiju_srcs_f90} ${raiju_srcs_f} ${RAIJUIC})
target_link_libraries(raijulib baselib)