file(GLOB rcm_srcs_f90 *.f90)
file(GLOB rcm_srcs_f *.F)
if(CMAKE_Fortran_COMPILER_ID MATCHES Intel)
	set_source_files_properties(${rcm_srcs_f} PROPERTIES COMPILE_FLAGS "-fixed -nowarn")
elseif(CMAKE_Fortran_COMPILER_ID MATCHES GNU)
	set_source_files_properties(${rcm_srcs_f} PROPERTIES COMPILE_FLAGS "-ffixed-form")
endif()
add_library(rcmlib ${rcm_srcs_f90} ${rcm_srcs_f})
target_link_libraries(rcmlib baselib)
