file(GLOB sif_srcs_f90 *.F90)
file(GLOB sif_srcs_f *.F)
if(CMAKE_Fortran_COMPILER_ID MATCHES Intel)
	set_source_files_properties(${sif_srcs_f} PROPERTIES COMPILE_FLAGS "-fixed -nowarn")
elseif(CMAKE_Fortran_COMPILER_ID MATCHES GNU)
	set_source_files_properties(${sif_srcs_f} PROPERTIES COMPILE_FLAGS "-ffixed-form")
endif()
add_library(siflib ${sif_srcs_f90} ${sif_srcs_f})
target_link_libraries(siflib baselib)